# SearchEngineMax

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
examples/: answers.json  requests.json
examples/resources/: i.txt  old.txt  part1.txt  respectfully.txt  well.txt
include/: ConverterJSON.h  Exceptions.h  InvertedIndex.h  SearchServer.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
tests/: TestInvertedIndex.cpp  TestSearchServer.cpp
